--- a/www/conexiones/index.html
+++ b/www/conexiones/index.html
@@ -18,21 +18,72 @@
 
   <div class="nav-bar">
     <a class="nav-item" id="ficha-link">FICHA</a>
-    <span class="nav-item active">CONEXIONES</span>
-  
-    <div class="nav-item dropdown">
+    <a class="nav-item active" id="conexiones-link">CONEXIONES</a>
+    <a class="nav-item" id="notas-link" href="/notas">NOTAS</a>
+
+    <div id="admin-link-container" style="display:none;">
+      <a class="nav-item" href="/admin">ADMIN</a>
+    </div>
+
+    <div class="nav-item dropdown" id="ia-dropdown-container" style="display:none;">
       IAs
-      <div class="dropdown-content">
-        <a href="#" id="hada-link">Hada</a>
-        <a href="#" id="eidolon-link">Eidolon</a>
-        <a href="#" id="fantasma-link">Fantasma</a>
-        <a href="#" id="anima-link">Anima</a>
+      <div class="dropdown-content" id="ia-dropdown">
+        <!-- Links dinámicos a IAs -->
       </div>
     </div>
   </div>
-  
-  
-  
+
+  <script>
+    window.addEventListener("DOMContentLoaded", async () => {
+      try {
+        const sessionRes = await fetch("/session-info");
+        const sessionData = await sessionRes.json();
+        const id = sessionData.usuario;
+        const rol = sessionData.rol;
+
+        if (id) {
+          document.getElementById("conexiones-link").setAttribute("href", `/conexiones`);
+
+          // Mostrar Admin si es rol admin
+          if (rol === "admin") {
+            document.getElementById("admin-link-container").style.display = "inline-block";
+          }
+
+          // Pedimos los usos reales
+          const usosRes = await fetch("/usos");
+          if (usosRes.ok) {
+            const usos = await usosRes.json();
+            const iaDropdown = document.getElementById("ia-dropdown");
+            const iaDropdownContainer = document.getElementById("ia-dropdown-container");
+
+            const ias = ["hada", "eidolon", "fantasma", "anima"];
+            let tieneIAsDisponibles = false;
+
+            ias.forEach(ia => {
+              const cantidad = usos[ia];
+              if (cantidad === -1 || (typeof cantidad === "number" && cantidad > 0)) {
+                const link = document.createElement("a");
+                link.href = `/${ia}`;
+                link.textContent = ia.charAt(0).toUpperCase() + ia.slice(1);
+                iaDropdown.appendChild(link);
+                tieneIAsDisponibles = true;
+              }
+            });
+
+            // Mostrar el botón de IAs solo si hay al menos una IA disponible
+            if (tieneIAsDisponibles) {
+              iaDropdownContainer.style.display = "inline-block";
+            }
+          }
+        }
+      } catch (error) {
+        console.error("Error cargando sesión o usos:", error);
+      }
+    });
+  </script>
+
+
+
 
   <div class="terminal">
     <div class="scanline"></div>
@@ -43,13 +94,13 @@
   <script>
     window.addEventListener("DOMContentLoaded", () => {
       const id = new URLSearchParams(window.location.search).get("id");
-  
+
       if (id) {
         const setHref = (id, selector) => {
           const el = document.getElementById(selector);
           if (el) el.href = `/${selector.replace("-link", "")}?id=${id}`;
         };
-  
+
         setHref(id, "ficha-link");
         setHref(id, "hada-link");
         setHref(id, "eidolon-link");
@@ -59,36 +110,36 @@
     });
 
     document.addEventListener("DOMContentLoaded", () => {
-    const dropdown = document.querySelector(".dropdown");
-    const dropdownContent = document.querySelector(".dropdown-content");
+      const dropdown = document.querySelector(".dropdown");
+      const dropdownContent = document.querySelector(".dropdown-content");
 
-    if (dropdown && dropdownContent) {
-      // Mostrar/ocultar al hacer clic
-      dropdown.addEventListener("click", (e) => {
-        e.stopPropagation(); // Evita que se cierre al hacer clic dentro
-        dropdown.classList.toggle("active");
-        dropdownContent.classList.toggle("show");
-      });
+      if (dropdown && dropdownContent) {
+        // Mostrar/ocultar al hacer clic
+        dropdown.addEventListener("click", (e) => {
+          e.stopPropagation(); // Evita que se cierre al hacer clic dentro
+          dropdown.classList.toggle("active");
+          dropdownContent.classList.toggle("show");
+        });
 
-      // Cierra el menú al hacer clic fuera
-      document.addEventListener("click", (e) => {
-        if (!dropdown.contains(e.target)) {
-          dropdown.classList.remove("active");
-          dropdownContent.classList.remove("show");
-        }
-      });
+        // Cierra el menú al hacer clic fuera
+        document.addEventListener("click", (e) => {
+          if (!dropdown.contains(e.target)) {
+            dropdown.classList.remove("active");
+            dropdownContent.classList.remove("show");
+          }
+        });
 
-      // Cierra con la tecla Escape
-      document.addEventListener("keydown", (e) => {
-        if (e.key === "Escape") {
-          dropdown.classList.remove("active");
-          dropdownContent.classList.remove("show");
-        }
-      });
-    }
-  });
+        // Cierra con la tecla Escape
+        document.addEventListener("keydown", (e) => {
+          if (e.key === "Escape") {
+            dropdown.classList.remove("active");
+            dropdownContent.classList.remove("show");
+          }
+        });
+      }
+    });
   </script>
-  
+
 </body>
 <script src="/conexiones/script.js">
 </script>>
